--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Flask>=2.0,<3.0
-# Add other dependencies here
-
-gunicorn>=20.0.0,<21.0.0
-
+Flask<3.0,>=2.0
+gunicorn<21.0.0,>=20.0.0
 psycopg2==2.9.3
 Pillow==9.4.0
+pandas
+
